@@ -3,7 +3,7 @@ machine parisc64
 majors 2.4 2.6
 flavour parisc64
 kernel-2.4 kernel-image-2.4.27-64-smp
-kernel-2.6 kernel-image-2.6.8-1-64-smp
+kernel-2.6 kernel-image-2.6.8-2-64-smp
 usable \
   kernel-image-2.4.25-32 \
   kernel-image-2.4.25-32-smp \
@@ -17,7 +17,7 @@ usable \
   kernel-image-2.4.27-32-smp \
   kernel-image-2.4.27-64 \
   kernel-image-2.4.27-64-smp \
-  kernel-image-2.6.8-1-32 \
-  kernel-image-2.6.8-1-32-smp \
-  kernel-image-2.6.8-1-64 \
-  kernel-image-2.6.8-1-64-smp
+  kernel-image-2.6.8-2-32 \
+  kernel-image-2.6.8-2-32-smp \
+  kernel-image-2.6.8-2-64 \
+  kernel-image-2.6.8-2-64-smp
