@@ -12,8 +12,8 @@ usable \
   kernel-image-2.6-itanium-smp \
   kernel-image-2.6.7-1-itanium \
   kernel-image-2.6.7-1-itanium-smp \
-  kernel-image-2.6.8-1-itanium \
-  kernel-image-2.6.8-1-itanium-smp
+  kernel-image-2.6.8-2-itanium \
+  kernel-image-2.6.8-2-itanium-smp
 unusable \
   kernel-image-2.4-mckinley \
   kernel-image-2.4-mckinley-smp \
@@ -23,5 +23,5 @@ unusable \
   kernel-image-2.6-mckinley-smp \
   kernel-image-2.6.7-1-mckinley \
   kernel-image-2.6.7-1-mckinley-smp \
-  kernel-image-2.6.8-1-mckinley \
-  kernel-image-2.6.8-1-mckinley-smp
+  kernel-image-2.6.8-2-mckinley \
+  kernel-image-2.6.8-2-mckinley-smp
