@@ -1,15 +1,15 @@
 cpuinfo raptor.cpuinfo
 majors 2.4 2.6
 kernel-2.4 kernel-image-2.4.27-1-s390
-kernel-2.6 kernel-image-2.6.8-1-s390
+kernel-2.6 kernel-image-2.6.8-2-s390
 usable \
   kernel-image-2.4.26-1-s390 \
   kernel-image-2.4.27-1-s390 \
-  kernel-image-2.6.8-1-s390
+  kernel-image-2.6.8-2-s390
 unusable \
   kernel-image-2.4.26-1-s390-tape \
   kernel-image-2.4.26-1-s390x \
   kernel-image-2.4.27-1-s390-tape \
   kernel-image-2.4.27-1-s390x \
-  kernel-image-2.6.8-1-s390-tape \
-  kernel-image-2.6.8-1-s390x
+  kernel-image-2.6.8-2-s390-tape \
+  kernel-image-2.6.8-2-s390x
