@@ -6,8 +6,11 @@ base-installer (1.17) UNRELEASED; urgency=low
       hppa is still trailing behind at 2.6.8-1.
   * Matt Kraai
     - Fix the spelling of "file system".
+  * Steve Langasek
+    - Bump kernel defaults to 2.4.27-2 for alpha, and to 2.6.8-2 for hppa.
+    - Update kernel test directory to match.
 
- -- Colin Watson <cjwatson@debian.org>  Sun, 30 Jan 2005 21:39:29 +0000
+ -- Steve Langasek <vorlon@debian.org>  Wed, 16 Feb 2005 11:34:15 -0800
 
 base-installer (1.16) experimental; urgency=low
 
